# satellite_paper_rag

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-04-satellite-paper-rag-phase-1.md  2026-07-06-pure-rag-phase-2.md  2026-07-15-llm-evidence-auditor.md  2026-07-15-rag-ignore-pca.md
docs/superpowers/specs/: 2026-07-04-satellite-paper-rag-chunking-design.md  2026-07-06-pure-rag-phase-2-design.md
src/satellite_paper_rag/: cli.py  config.py  schemas.py
src/satellite_paper_rag/application/: __init__.py  rule_engine.py
src/satellite_paper_rag/chunking/: metadata_enricher.py  pipeline.py  recursive_splitter.py
src/satellite_paper_rag/domain/: feature_schema.py  vocabulary.py
src/satellite_paper_rag/embeddings/: client.py  (+1 more)
tests/: test_chunking_pipeline.py  test_class_normalizer.py  test_cli.py  test_cli_embedding.py  test_cli_extract_rules.py  test_cli_llm_save_rules.py  test_cli_prediction_audit.py  test_config.py  test_dashscope_embedding_client.py  test_dashscope_llm_client.py  test_embedding_index.py  test_evidence_guardrails.py  test_llm_evidence_auditor.py  test_llm_rule_extractor.py  test_metadata_enricher.py  test_mock_retriever.py  test_observation_io_and_apply_cli.py  test_observation_normalizer.py  test_pdf_parser.py  test_prediction_evidence.py  test_recursive_splitter.py  test_rule_application.py  test_rule_eval.py  test_rule_extractor.py  test_rule_library.py  test_schemas.py  test_text_markdown_parsers.py  test_vocabulary.py
tests/fixtures/: eval_queries.json  sample_landsat_paper.txt  sample_sentinel3_paper.md
(+22 files in other folders)
